--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
                     <h3>تاريخ عريق</h3>
                     <p>
                         الزاوية التجانية هي طريقة صوفية سنية تنسب إلى الشيخ أبي العباس أحمد التيجاني (1150-1230هـ)، 
-                        وتتميز بالاهتمام بذكر الله وتلاوة القرآن الكريم. تأسست الزاوية التجانية في مدينة فاس بالمغرب 
+                        وتتميز بالاهتمام بذكر الله وتلاوة القرآن الكريم. تأسست الزاوية التجانية في مدينة بوسمغون ولاية البيض -الجزائر-  
                         وانتشرت في العديد من الدول العربية والإفريقية.
                     </p>
                 </div>
@@ -157,7 +157,7 @@
                 </div>
                 <h3>رؤيتنا</h3>
                 <p>
-                    أن نكون المدرسة الرائدة إلكترونياً في تعليم القرآن الكريم وعلومه وفق المنهج التجاني الأصيل، 
+                    أن تكون المدرسة الرائدة إلكترونياً في تعليم القرآن الكريم وعلومه وفق المنهج التجاني الأصيل، 
                     وأن نصل بكل طالب إلى إتقان تلاوة وحفظ كتاب الله عز وجل مع تفعيل مهاراته وإثراء معارفه.
                 </p>
             </div>
@@ -247,7 +247,7 @@
                     <i class="fas fa-user-graduate"></i>
                 </div>
                 <h3>معلمون متخصصون</h3>
-                <p>نخبة من المعلمين والمشايخ الحاصلين على إجازات في القرآن الكريم</p>
+                <p>نخبة من اساتدة التعليم القراني و الدكاترة المتخصصين في علوم القران الكريم</p>
             </div>
             
             <div class="feature-card" data-aos="zoom-in" data-aos-delay="200">
