--- a/templates/structure.html
+++ b/templates/structure.html
@@ -109,7 +109,7 @@
         <div class="section-header" data-aos="fade-up">
             <span class="section-label">الهيئة التعليمية</span>
             <h2 class="section-title">المعلمون والمشايخ</h2>
-            <p class="section-description">نخبة من المعلمين المتخصصين في علوم القرآن والشريعة</p>
+            <p class="section-description">نخبة من اساتدة التعليم القراني و الدكاترة المتخصصين في علوم القران الكريم</p>
         </div>
         
         <div class="teachers-grid">
